preview updates, label feature style changes

--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
       <div id="product-preview" class="product-preview bg-white shadow-sm">
         <div id="preview-item" class="preview-item media">
             <div id="preview-image" class="preview-image align-self-center mr-2"></div>
-            <div class="media-body mr-2 pt-2">
+            <div class="media-body mr-2 pt-1">
               <div id="preview-name" class="preview-name"></div>
               <div id="preview-price" class="preview-price"></div>
+              <div id="preview-productinfo" class="preview-productinfo"></div>
             </div>
         </div>
       </div>    
