omnibox work in progress

--- a/index.html
+++ b/index.html
@@ -81,19 +81,11 @@
     <!-- Omnibox-->
     <div id="omnibox" class="omnibox">
 
-        <!-- <div id="suggested" class="row no-gutters suggested bg-white rounded p-1 m-2 shadow-sm border">
-           Suggested Results 
-        </div> -->
-
-        <div id="departments" class="row no-gutters departments bg-white rounded p-1 m-2 shadow-sm border">
+        <div id="departments" class="row no-gutters departments rounded p-1 m-2 shadow-sm border">
         </div>
-
-        <!-- <div id="favorites" class="row no-gutters favorites bg-white rounded p-1 m-2 shadow-sm border">
-          Favorites 
-        </div> -->
-  
         
     </div>
+
     <div id="overviewmap" class="overviewmap m-2 rounded shadow-sm"></div>
 
       <!-- Product Hover Preview -->
