--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     </div>
 
     <!-- Omnibox-->
-    <div id="omnibox" class="omnibox shadow-sm">
-        <div id="search-bar" class="input-group search-bar bg-white shadow-sm m-2 p-1">
+    <div id="omnibox" class="omnibox">
+        <div id="search-bar" class="input-group search-bar bg-white shadow-sm m-2 p-1 border">
               <input type="text" id="search-input" class="form-control" placeholder="Search here">
               <div class="input-group-append">
                 <button id="search-button" class="btn btn-warning" type="button">Search</button>
