pre-merge to master

--- a/index.html
+++ b/index.html
@@ -31,16 +31,15 @@
             </button>
           </div>
           <div class="modal-body">
-            <p>ConsumerLand is an experimental eCommerce UX. I built it because of a nagging concern I've always had that designers and developers are doing online shopping -- and especially grocery shopping -- wrong.</p> 
+            <p>I've always felt the Internet does grocery shopping wrong. I built this prototype, ConsumerLand, to explore a potential solution to the problems I have with eCommerce UX.</p> 
             <h4 class="alert alert-secondary permanent-marker">Databases vs. Hunter Gatherers</h4>
-            <p>Virtually all online shopping today takes the "database look up" approach: The user enters a search query, and are returned a list of results. To get different results, the user must enter a new query, returning a new set of results.</p>
-            <p>But shopping is an intuitive behavior tied to a sense of space and geography. We "hunt and gather". We browse and roam. We want to explore, not just scan a list.</p> 
-            <p>So I asked myself, "What if there was a way to mimic this experience on a webpage?" And ConsumerLand is what I came up with.</p> 
+            <p>Virtually all online shopping today takes the "database look-up" approach that evolved from old-fashioned hard-core computer science: The user enters a search string, and are returned a list of results. </p>
+            <p>But that's not how we shop. Shopping is an intuitive behavior tied to a sense of space and geography. We "hunt and gather". We browse and roam. We want to explore, not be funneled into a narrow list of results.</p> 
             <p>I called this prototype ConsumerLand because this online grocery store is a "land" -- or more accurately, a map of the land. ConsumerLand is where all of the things you could buy live, waiting for you to discover them.</p>
             <h4 class="alert alert-secondary permanent-marker">About Me</h4>
             <p>Hi! I'm a digital creator and producer with over 8 years designing, coding and managing web application projects. ConsumerLand was very influenced by my years in the CPG and grocery space.</p>
             <h4 class="alert alert-secondary permanent-marker">I'd Love Your Feedback!</h4>
-            <p>Is there some feature that you'd like to see? Something obviously missing? Something you especially love? Please email me at bcupham@gmail.com or click Contact in the main menu.</p>
+            <p>Is there some feature that you'd like to see? Something obviously missing? Something you especially love? Please email me at bcupham@gmail.com.</p>
             <p>This interface has not been cross-browser tested yet. I recommend viewing on the latest version of Chrome only.</p>
             <p>ConsumerLand was built with the wonderful OpenLayers mapping library, D3, Express and plain vanilla JS.</p> 
           </div>
