omni list resizes based on content (flex)

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 
     <!-- Omnibox-->
     <div id="omnibox" class="omnibox">
-        <div id="search-bar" class="input-group search-bar bg-white shadow-sm m-2 p-1 border">
+        <div id="search-bar" class="input-group search-bar bg-white shadow-sm mx-2 my-1 p-1 border">
               <input type="text" id="search-input" class="form-control" placeholder="Search here">
               <div class="input-group-append">
                 <button id="search-button" class="btn btn-warning" type="button">Search</button>
               </div>          
         </div>
-      <div id="departments" class="departments p-1 m-2 shadow-sm border"></div>
+      <div id="departments" class="departments p-1 mx-2 my-1 shadow-sm border"></div>
     </div>
 
     <div id="overviewmap" class="overviewmap m-2 rounded shadow-sm"></div>
